syntax = "proto3";

package noble.swap.v1;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "swap.noble.xyz/types";

message Route {
  // ID of the Pool.
  uint64 pool_id = 1;

  // Destination denom after the Swap in the Pool.
  string denom_to = 2;
}

message Swap {
  // ID of the pool used in the swap.
  uint64 pool_id = 1;
  // The input coin for the swap.
  cosmos.base.v1beta1.Coin in = 2 [(gogoproto.nullable) = false];
  // The output coin after the swap.
  cosmos.base.v1beta1.Coin out = 3 [(gogoproto.nullable) = false];
  // Any fees incurred during the swap.
  repeated cosmos.base.v1beta1.Coin fees = 4 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (amino.encoding) = "legacy_coins",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
